IntersectionObserver: send notifications when objects disappear.

TEST=intersection-observer/display-none.html
BUG=621693
R=eae@chromium.org

Review-Url: https://codereview.chromium.org/2149033003
Cr-Commit-Position: refs/heads/master@{#405630}

Former-commit-id: 39fcf43a4bee8f0b15abf4ef8100c2612dd45cb2